--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="logo.png" alt="Logo Barbearia Alura" /></h1>
+        <h1><img src="./images/logo.png" alt="Logo Barbearia Alura" /></h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="contact">
       <form>
         <label for="nomesobrenome">Nome e sobrenome</label>
         <input type="text" id="nomeobrenome" class="input-padrao" required/>
@@ -102,7 +102,7 @@
       </table>
     </main>
     <footer>
-      <img src="logo-branco.png" alt="Logo Barbearia Alura" />
+      <img src="./images/logo-branco.png" alt="Logo Barbearia Alura" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
   </body>
