--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
@@ -26,12 +27,16 @@
       </div>
     </header>
 
-    <img class="banner" src="banner.jpg" alt="Foto barbearia" />
+    <img class="banner" src="./images/banner.jpg" alt="Foto barbearia" />
     <main>
       <section class="principal">
         <h2 class="main-title">Sobre a Barbearia Alura</h2>
 
-        <img class="utils" src="utensilios.jpg" alt="Utensílios da barbearia" />
+        <img
+          class="utils"
+          src="./images/utensilios.jpg"
+          alt="Utensílios da barbearia"
+        />
 
         <p>
           Localizada no coração da cidade a
@@ -82,11 +87,11 @@
               <li class="items">Pontualidade</li>
               <li class="items">Limpeza</li>
             </ul>
-            <img class="benefits-image" src="beneficios.jpg" alt="" />
+            <img class="benefits-image" src="./images/beneficios.jpg" alt="" />
           </div>
           <div class="video">
             <iframe
-              width="560"
+              width="100%"
               height="315"
               src="https://www.youtube.com/embed/wcVVXUV0YUY"
               title="YouTube video player"
@@ -99,7 +104,7 @@
       </section>
     </main>
     <footer>
-      <img src="logo-branco.png" alt="" />
+      <img src="./images/logo-branco.png" alt="" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
   </body>
