--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="logo.png" alt="Logo Barbearia Alura" /></h1>
+        <h1><img src="./images/logo.png" alt="Logo Barbearia Alura" /></h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -23,7 +23,7 @@
       <ul class="produtos">
         <li>
           <h2>Cabelo</h2>
-          <img src="cabelo.jpg" alt="" />
+          <img src="./images/cabelo.jpg" alt="" />
           <p class="produto-descricao">
             Na tesoura ou na máquina, como o cliente preferir.
           </p>
@@ -31,7 +31,7 @@
         </li>
         <li>
           <h2>Barba</h2>
-          <img src="barba.jpg" alt="" />
+          <img src="./images/barba.jpg" alt="" />
           <p class="produto-descricao">
             Corte e desenho profissional de barba.
           </p>
@@ -39,14 +39,14 @@
         </li>
         <li>
           <h2>Cabelo + Barba</h2>
-          <img src="cabelo+barba.jpg" alt="" />
+          <img src="./images/cabelo+barba.jpg" alt="" />
           <p class="produto-descricao">Pacote completo de cabelo e barba</p>
           <p class="produto-preco">R$ 35,00</p>
         </li>
       </ul>
     </main>
     <footer>
-      <img src="logo-branco.png" alt="" />
+      <img src="./images/logo-branco.png" alt="" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
     </footer>
   </body>
