--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="logo.png" alt="Logo Barbearia Alura" /></h1>
+        <h1><img src="./images/logo.png" alt="Logo Barbearia Alura" /></h1>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
